# SG2-RL

./: .gitignore  AGENT.md  README.md  pyproject.toml
assets/props/: peg.usd  peg_hole.usd
configs/: skrl_agent_placeholder.yaml  skrl_ppo_mlp_grasp_lift_96k.yaml  skrl_ppo_mlp_stage1_grasp_lift.yaml  skrl_ppo_mlp_stage2_insert.yaml  skrl_ppo_omnireset_bimanual_peg.yaml
docs/: DEPLOY.md  RL_BACKENDS.md
scripts/: record_grasp_lift_peg.py  record_orbit_pin_wrist_gizmos.py  record_path_apf_follow_gripper.py  record_path_apf_visual_only.py  register_sg2_tasks.py  run_apf_path_videos.sh  run_on_tai.sh  run_policy_inference.py  smoke_random_motion.py  smoke_vectorized_env_spawn.py  tmux_train_grasp_lift_ddp.sh  tmux_train_ppo_32768_ddp.sh  train_skrl_ppo.py  wandb_gif_eval.py
src/sg2_rl/: __init__.py  apf_path.py  arm_avoidance.py  config_loader.py  env_cfg.py  gym_register.py  omnireset_env_cfg.py  omnireset_task_mdp.py  orbit_camera.py  paths.py  peg_grasp_monitor.py  physics_material_bind.py  render_quality.py  right_gripper_ik.py  robot_cfg.py  scene_layout.py  tabletop_rewards.py  task_mdp.py  usd_gizmo.py  usd_path_curve.py  wandb_utils.py
tests/: test_apf_path.py  test_gym_register_grasp_lift.py  test_peg_grasp_monitor.py  test_repo_layout.py  test_scene_layout.py
