[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sg2-rl"
version = "0.1.0"
description = "Isolated RL workspace for FFW SG2 peg scene (UWLab task configs)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "SG2-RL contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "isaac: needs Isaac Lab + UWLab runtime (set SG2_RL_RUN_ISAAC=1)",
]
